fix circular dependency, refactor some methods with elseThrow()