@@ -3,77 +3,48 @@ package com.javabootcamp.socialmeli.service;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import com.javabootcamp.socialmeli.dto.FollowedSellersDto;
-import com.javabootcamp.socialmeli.dto.SellerDto;
 import com.javabootcamp.socialmeli.dto.UserDto;
-
-import com.javabootcamp.socialmeli.dto.ClientDto;
-import com.javabootcamp.socialmeli.dto.LastPostDto;
-import com.javabootcamp.socialmeli.dto.PostDto;
-
 import com.javabootcamp.socialmeli.exception.EntityNotFoundException;
 import com.javabootcamp.socialmeli.dto.SellerWithFollowersDTO;
 import com.javabootcamp.socialmeli.dto.FollowerDto;
 import com.javabootcamp.socialmeli.dto.ResponseDto;
-import com.javabootcamp.socialmeli.dto.SellerDto;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
-import com.javabootcamp.socialmeli.exception.EntityNotFoundException;
-import com.javabootcamp.socialmeli.dto.UserDto;
 import com.javabootcamp.socialmeli.repository.UserRepository;
 import com.javabootcamp.socialmeli.model.User;
-import com.javabootcamp.socialmeli.repository.UserRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.Optional;
-
-
-import lombok.RequiredArgsConstructor;
-
-import org.springframework.stereotype.Service;
-
-import java.util.Optional;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class UserServiceImpl implements IUserService{
+public class UserServiceImpl implements IUserService {
 
     private final UserRepository userRepository;
-    private final IPostService postService;
 
     private final IFollowService followService;
 
     @Override
     public List<UserDto> getAllUsers() {
         ObjectMapper mapper = new ObjectMapper();
-        return userRepository.getAllUsers().stream().map(u -> mapper.convertValue(u,UserDto.class)).collect(Collectors.toList());
+        return userRepository
+                .getAllUsers()
+                .stream()
+                .map(u -> mapper.convertValue(u, UserDto.class))
+                .toList();
 
     }
 
-
-
     @Override
     public SellerWithFollowersDTO searchFollowersById(Integer userId) {
-        Optional<User> user = userRepository.findById(userId);
-
-        if(user.isEmpty()) throw new EntityNotFoundException("No existe un usuario con id: + " + userId);
+        User user = searchUserById(userId);
 
         SellerWithFollowersDTO sellerWithFollowersDTO = new SellerWithFollowersDTO();
 
-        List<FollowerDto> followersDto  = followService.searchFollowersByUser(userId);
+        List<FollowerDto> followersDto = followService.searchFollowersByUser(userId);
 
-        sellerWithFollowersDTO.setUserId(user.get().getId());
-        sellerWithFollowersDTO.setUserName(user.get().getUsername());
+        sellerWithFollowersDTO.setUserId(user.getId());
+        sellerWithFollowersDTO.setUserName(user.getUsername());
         sellerWithFollowersDTO.setFollowers(followersDto);
 
         return sellerWithFollowersDTO;
@@ -83,18 +54,17 @@ public class UserServiceImpl implements IUserService{
     public FollowedSellersDto searchFollowedById(Integer userId) {
         ObjectMapper mapper = new ObjectMapper();
         List<User> userList = followService.searchFollowedByUser(userId);
-        if (userList.isEmpty()) { //verifico si el usuario sigue a alguien
+        if (userList.isEmpty()) { // verifico si el usuario sigue a alguien
             throw new EntityNotFoundException("No se encontraron seguidores");
         }
 
         List<UserDto> userDtos = userList.stream()
-                                .map(u -> mapper.convertValue(u, UserDto.class))
-                                .collect(Collectors.toList());
+                .map(u -> mapper.convertValue(u, UserDto.class))
+                .toList();
 
-        FollowedSellersDto followedSellersDto = new FollowedSellersDto(userId,
-                                                                        searchUserById(userId).getUsername(),
-                                                                        userDtos);
-        return followedSellersDto;
+        return new FollowedSellersDto(userId,
+                searchUserById(userId).getUsername(),
+                userDtos);
     }
 
     @Override
@@ -114,23 +84,21 @@ public class UserServiceImpl implements IUserService{
 
     @Override
     public ResponseDto deleteFollower(Integer followerId, Integer followedId) {
-        return followService.deleteFollow(followerId,followedId);
+        return followService.deleteFollow(followerId, followedId);
     }
 
     @Override
     public User searchUserById(Integer id) {
-        Optional<User> user = userRepository.findById(id);
-        if(user.isEmpty()){
-            throw new EntityNotFoundException("No existe el usuario");
-        }
-        return user.get();
+        return userRepository
+                .findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("User does not exist"));
     }
 
     @Override
     public List<Integer> getListSellerId(Integer userId) {
-        //valido que exista usuario
+        // valido que exista usuario
         User user = searchUserById(userId);
-        //retorno una lista solo con los id's
+        // retorno una lista solo con los id's
         return searchFollowedById(user.getId()).getFollowed().stream().map(UserDto::getId).toList();
     }
 }
